cluster/apps/default/echo-server/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-echo
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`echo.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: rfc1918
      #   # - name: basicauth
      services:
        - name: echo-server
          namespace: default
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
